<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/app_name">
        <Preference
            android:key="version"
            android:summary="v 1.0"
            android:title="当前版本" />
        <Preference
            android:key="share"
            android:title="@string/menu_share" />
        <Preference
            android:key="star"
            android:summary="前往项目地址给个 Star，鼓励作者"
            android:title="给我点赞" />
    </PreferenceCategory>
    <PreferenceCategory android:title="大作业小组成员">
        <Preference
            android:key="weibo"
            android:summary="@string/about_weibo"
            android:title="黄嘉逸 20222034033" />
        <Preference
            android:key="blog"
            android:summary="@string/about_blog"
            android:title="孙铎誉 20222034018" />
        <Preference
            android:key="github"
            android:summary="@string/about_github"
            android:title="梁锦棕 20222034051" />
    </PreferenceCategory>
    <PreferenceCategory android:title="版权">
        <Preference
            android:key="api"
            android:summary="NeteaseCloudMusicApi"
            android:title="在线音乐" />
    </PreferenceCategory>
</PreferenceScreen>